[tool.poetry]
name = "pddlgym"
version = "0.0.5"
description = ""
authors = ["Tom Silver <tslvr@mit.edu>, Rohan Chitnis <ronuchit@mit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym = ">=0.24.0"
gymnasium = ">=0.24.0"
pillow = ">=8,<10"
matplotlib = "^3.8.0"
imageio = "^2.31.5"
networkx = "^3.1"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
