[project]
authors = [
    { name = "Tom Silver", email = "tslvr@mit.edu" },
    { name = "Rohan Chitnis", email = "ronuchit@gmail.com" },
]
description = "Convert a PDDL domain into a Gymnasium environment."
name = "pddlgym"
requires-python = ">= 3.11"
version = "0.0.8"
dependencies = ["matplotlib", "pillow", "gymnasium", "imageio", "scikit-image", "networkx>=3.4.2,<4", "pytest>=8.3.5,<9"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pddlgym = { path = ".", editable = true }

[tool.pixi.tasks]
